# AirflowLLMCompanion

./: Contributing.md  README.md  main.py  pyproject.toml  setup.py
airflow_llm_plugin/: __init__.py  models.py  plugin.py  routes.py
airflow_llm_plugin/api/: chat.py  dag_generator.py  model_config.py
airflow_llm_plugin/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py  prompts.py
airflow_llm_plugin/mcp_tools/: mcp_client.py
airflow_llm_plugin/static/css/: chat_style.css  styles.css
airflow_llm_plugin/static/js/: chat.js  dag_generator.js
airflow_llm_plugin/templates/: base.html  chat.html  dag_generator.html  model_config.html
